# DocTR_Process

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  DocTR_Process_dir_tree.txt  Dockerfile  HEIDELBERG_INTEGRATION.md  INTEGRATION_SUMMARY.md  Makefile  PR_DESCRIPTION.md  README.md  REFACTORING_COMPLETE.md  REFACTOR_SUMMARY.md  add_main_guard.patch  check_repo_imports.py  codex_doctr_process_update.txt  configf.yaml  conftest.py  environment.yml  fix-pickling-error-in-run_pipeline2.patch  generate_issues_csv.py  import_issues.py  issues.csv  issues_utf8.csv  post_ocr_corrections.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_heidelberg_basic.py  test_heidelberg_detection.py  test_heidelberg_simple.py  test_line_items_direct.py  test_phase6_improvements.py  test_truck_tickets.db  validate_heidelberg_integration.py
.ai-assistant/: context.md  system-prompt.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python.yml
DocTR_Mod/: README.md  config.yaml  config_update.yaml  doctr_env_py310_environment.yml  doctr_ocr_to_csv.py  log_report.csv  log_report.html  ocr_keywords.xlsx  requirements.txt
DocTR_Mod/docs/: sample_config.yaml
DocTR_Mod/doctr_ocr/: file_utils.py  preflight.py  reporting_utils.py  vendor_utils.py
configs/: config.yaml  extraction_rules.yaml  ocr_keywords.csv  sample_config.yaml
docs/: COMMIT_FIX_SUMMARY.md  DEVELOPER_GUIDE.md  DOCTR_OCR_INTEGRATION_SUMMARY.md  E2E_TESTING_PROGRESS.md  ENVIRONMENT_SETUP_COMPLETE.md  FILE_ACCESS_CHECKLIST.md  IMPLEMENTATION_STATUS_CORRECTIONS.md  ISSUES_12_14_EXCEL_EXPORT_SUMMARY.md  ISSUES_16_26_TESTING_FRAMEWORK_COMPLETE.md  ISSUE_10_FIELD_PRECEDENCE_COMPLETE.md  ISSUE_11_TEST_FIXTURES_COMPLETE.md  ISSUE_13_DOCSTRINGS_TYPE_HINTS_COMPLETE.md  ISSUE_15_README_SYNC_COMPLETE.md  ISSUE_17_INVOICE_EXPORT_SUMMARY.md  ISSUE_18_MANIFEST_LOG_SUMMARY.md  ISSUE_19_CLI_INTERFACE_SUMMARY.md  ISSUE_20_21_REVIEW_QUEUE_AND_PROCESSING_LEDGER_SUMMARY.md  ISSUE_22_VENDOR_TEMPLATES_SUMMARY.md  ISSUE_23_LOGO_DETECTION_COMPLETE.md  ISSUE_24_BATCH_PROCESSING_SUMMARY.md  ISSUE_25_SQL_OPTIMIZATION_COMPLETE.md  ISSUE_27_API_DOCUMENTATION_COMPLETE.md  ISSUE_28_ALEMBIC_MIGRATION_SCRIPTS_COMPLETE.md  ISSUE_29_FILE_HASH_VERIFICATION_COMPLETE.md  ISSUE_2_SQLALCHEMY_ORM_COMPLETE.md  ISSUE_30_SYNONYM_NORMALIZATION_TESTS_COMPLETE.md  ISSUE_3_SEED_DATA_SCRIPTS_COMPLETE.md  ISSUE_6_FILENAME_PARSER_SUMMARY.md  ISSUE_9_CONFIG_LOADERS_COMPLETE.md  MASTER_ISSUE_TRACKER.md  NEXT_STEPS.md  SESSION_SUMMARY_2025-11-05.md  Truck_Ticket_Processing_Complete_Spec.md  Truck_Ticket_Processing_Complete_Spec_v1.1.md  USER_GUIDE.md  repo_hygiene_standing_instructions.md
docs/Project_Inspections/: index.html  script.js  (+1 more)
doctr_mod/: README.md  config.yaml  doctr_ocr_to_csv.py  extraction_rules.yaml  gui.py  ocr_keywords.csv  ocr_keywords.xlsx
extract/: __init__.py  fields.py
outputs/: test.csv
processor/: filename_utils.py
samples/: README.md
scripts/: activate_env.ps1  archive_sandbox.py  clean.ps1  clean.sh
src/: pipeline.py
tests/: conftest.py  test_batch_processor.py  test_cli.py  test_cli_options.py  test_csv_output.py  test_csv_output.py.bak  test_date_calculations.py  test_duplicate_detector.py  test_env_and_logging.py  test_env_and_logging.py.bak  test_excel_exporter.py  test_excel_integration.py  test_extract.py  test_extract_fields.py  test_file_hash.py  test_filename_integration.py  test_filename_parser.py  test_filename_utils.py  test_heidelberg_integration.py  test_image_cleanup.py  test_image_cleanup.py.bak  test_importlib_resources.py  test_integration_repository_processor.py  test_invoice_exporter.py  test_invoice_integration.py  test_io.py  test_line_items.py  test_logging.py  test_logo_detector.py  test_manifest_exporter.py  test_manifest_integration.py  test_manifest_validator.py  test_models.py  test_models_schema.py  test_models_simple.py  test_observability.py  test_ocr_engine.py  test_ocr_integration.py  test_ocr_tracking.py  test_ocr_utils.py  (+24 more)
utils/: ocr_clean.bat  ocr_embed_pdf.py  q-dev-chat-2025-10-17.md  test_ocr_simple.bat
(+326 files in other folders)
