[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctr_process"
version = "0.1.0"
description = "OCR pipeline for tickets/invoices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2,<3",
    "loguru>=0.7",
    "pandas",
    "tqdm",
    "pytesseract",
    "pdf2image",
    "pypdf",
    "pymupdf",
    "opencv-python-headless",
    "pillow",
    "openpyxl",
    "importlib-resources>=1.3; python_version<'3.9'",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
doctr-process = "doctr_process.__main__:main"
doctr-gui = "doctr_process.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
doctr_process = ["configs/*", "assets/*"]
